# McConnect

./: .gitignore  Cargo.toml  LICENSE  mc-proxy.code-workspace  readme.md
.github/workflows/: release.yml
client/: Cargo.toml
client/src/: main.rs
mc-connect-app/: index.html  package-lock.json  package.json
mc-connect-app/src/: App.tsx  index.css  main.tsx
mc-connect-app/src-tauri/: Cargo.toml  tauri.conf.json
mc-connect-app/src-tauri/icons/: icon.icns
mc-connect-app/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  state.rs  utils.rs
mc-connect-app/src/components/: MappingCard.tsx  Sidebar.tsx
mc-connect-app/src/hooks/: useLogs.ts  useMappings.ts  usePersistence.ts  useServer.ts
mc-connect-app/src/pages/: About.tsx  Console.tsx  Dashboard.tsx  Server.tsx  Settings.tsx
mc-connect-app/src/types/: index.ts
mc-connect-cli/: Cargo.toml
mc-connect-cli/src/: main.rs  utils.rs
mc-connect-cli/src/commands/: client.rs  server.rs
mc-connect-core/: Cargo.toml  build_log.txt  errors.json
mc-connect-core/src/: bridge.rs  lib.rs  tcp.rs  ws.rs
mc-connect-core/src/controllers/: health_controller.rs  mod.rs  ws_controller.rs
mc-connect-core/src/encryption/: aes_engine.rs  mod.rs  rsa_engine.rs  secure_connect.rs  traits.rs
mc-connect-core/src/models/: mod.rs  packet.rs
mc-connect-core/src/services/: mod.rs  proxy_service.rs  ws_client_service.rs
mc-connect-core/src/services/proxy/: handlers.rs  mod.rs  session.rs
mc-connect-core/src/services/ws_client/: mod.rs  service.rs  stats.rs  tunnel.rs
server/: Cargo.toml
server/src/: main.rs
(+7 files in other folders)
