[package]
name = "mc-connect-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
mc-connect-core = { path = "../mc-connect-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
url = "2.5"
base64 = "0.22"
serde_json = "1.0"
