[package]
name = "mc-connect-core"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-web-actors = "4.3"
actix = "0.13"
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
url = "2.5"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
pkcs8 = { version = "0.10", features = ["alloc", "pem"] }
base64 = "0.22"
aes-gcm = "0.10"
